--- a/index.html
+++ b/index.html
@@ -5,8 +5,32 @@
     <title>HTML Academy: Седона</title>
   </head>
   <body>
-
-    <p>Репозиторий создан для обучения на интенсивном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">Базовый HTML и CSS</a>».</p>
-
+    <header class="main-header"
+    <div class="container">
+      <nav class="main-navigation">
+        <ul>
+          <li>
+            <a href="#">Информация</a>
+          </li>
+          <li>
+            <a href="#">Фото и видео</a>
+          </li>
+          <li>
+            <a href="#">Карта штата</a>
+          </li>
+          <li>
+            <a href="#">Гостиницы</a>
+          </li>
+        </ul>
+      </nav>
+      <div class="user-block">
+      </div>
+    </div>
+</header>
+    <main class="container">
+<div class="index-logo">
+  <img src="sedona-index-1200.psd" width="368" height="204" alt="Седона">
+</div>
+</main>
   </body>
 </html>
