--- a/index.html
+++ b/index.html
@@ -29,8 +29,52 @@
 </header>
     <main class="container">
 <div class="index-logo">
-  <img src="sedona-index-1200.psd" width="368" height="204" alt="Седона">
+
 </div>
+<section class="features">
+  <div class="features-item">
+    <b class="features-name">Жилье</b>
+    <p>Рекомендуем пожить в настоящем , всё как в кино!</p>
+  </div>
+  <div class="features-item">
+    <b class="features-name">Еда</b>
+    <p>Всегда заказывай фирменный бургер, вы не разочаруетесь!</p>
+  </div>
+  <div class="features-item">
+    <b class="features-name">Cувениры</b>
+    <p>Не только китайского, но и местного производства!</p>
+  </div>
+  <div class="features-item">
+    <b class="features-name">Небольшая площадь</b>
+    <p>Все достопримечательности находятся очень близко</p>
+  </div>
+    <div class="features-item">
+      <b class="features-name">Красивая дорога</b>
+      <p>Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
+    </div>
+
+      <div class="features-item">
+        <b class="features-name">Мало туристов</b>
+        <p>Большинство едет в Гранд-Каньон и толпится там</p>
+      </div>
 </main>
+<div class="container">
+  <h1>Заинтересовались?</h1>
+  <p>Укажите предполагаемые даты поездки<br>
+  И мы покажем вам лучшие предложения гостиниц в Седоне</p>
+<footer class="main-footer">
+      <div class="container">
+    <section class="footer-social">
+              <p>#VisitSedona</p>
+              <a class="social-btn social-btn-tw" href="#">Твиттер</a>
+              <a class="social-btn social-btn-fb" href="#">Фейсбук</a>
+              <a class="social-btn social-btn-inst" href="#">Инстаграмм</a>
+            </section>
+            <section class="footer-copyright">
+            <p>Разработано:</p>
+            <a class="btn" href="https://htmlacademy.ru">HTML Academy</a>
+          </section>
+        </div>
+      </footer>
   </body>
 </html>
